--- a/block-BHaaba/index.html
+++ b/block-BHaaba/index.html
@@ -6,3 +6,46 @@
 
 3. Inside the main content crate three columns. In each column take one image and a paragraph below the image.
 4. Using float is necessary. -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h1>This is our heading</h1>
+    </header>
+    <section class="clearfix ">
+        <article>
+            <div>
+                <img src="cat.jpg" alt="cat">
+            </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, tempore corrupti! Atque earum, ad voluptas, amet quia sit odit,
+        </p>
+    </article>
+    <article>
+        <div>
+        <img src="nita.jpg" alt="nita">
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat et adipisci labore soluta placeat! Sint aspernatur placeat ratione a!
+        </p>
+     </article>
+    <article>
+        <div>
+            <img src="taylor.jpg" alt="taylor">
+        </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque, hic eaque nobis ducimus accusantium obcaecati doloribus aut, totam voluptatibus blanditiis voluptate quod,
+    </p>
+    </article>
+    </section>
+    <footer>
+    <p>footer</p>
+    </footer>
+</body>
+</html>
