--- a/block-BHaabg/index.html
+++ b/block-BHaabg/index.html
@@ -13,3 +13,76 @@
 6. After the gallery section footer will come.
 
 7. Take a circular button at the right bottom corner of the page and keep its position fixed. The button should always take to the top of the page once clicked. -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+    <div class="container">
+        <a class="brand" href="LOGO">altcampus
+        </a>
+    </div>
+    <nav class="nav bar">
+        <a href="#">Home</a>
+        <a href="#">about</a>
+        <a href="#">contact</a>
+    </nav>
+    </header>
+    <aside class="container2">
+        <h1>This is my heading</h1>
+
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, excepturi tenetur molestias assumenda corporis ipsa error ea sint
+        </p>
+    </aside>
+    <section>
+        <div>
+            <img src="/images/pic01.png">
+        </div>
+    </section>
+    <section>
+    <article>
+        <div>
+        <img src="/images/cat1.jpg">
+        </div>
+    </article>
+    <article>
+        <div>
+            <img src="/images/cat2.jpg">
+        </div>
+    </article>
+    <article>
+        <div>
+            <img src="/images/dog.jpg">
+        </div>
+    </article>
+    </section>
+    <section>
+        <article>
+        <div>
+            <img src="/images/pic01.png">
+        </div>
+        </article>
+        <article>
+            <div>
+                <img src="/images/pic02.png">
+            </div>
+        </article>
+        <article>
+        <div>
+        <img src="/images/pic03.png">
+        </section>
+    <footer>
+        <a href="facebook">facebook</a>
+        <a href="twitter">twitter</a>
+        <a href="instagram">instagram</a>
+    </footer>
+</body>
+</html>
